<resources>
    <string name="app_name">Counter</string>
    <string name="increment">+</string>
    <string name="number">0</string>
    <string name="decrement">-</string>
    <string name="reset">Reset</string>
    <string name="first">First Activity</string>
    <string name="second">Second Activity</string>
    <string name="quantity">Quantity:</string>
    <string name="cost">0</string>
</resources>