<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.synyster.destructor.counter.MainActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/Increment"
        android:text="@string/increment"
        android:textSize="50sp"
        android:onClick="increment"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/number"
        android:textSize="50sp"
        android:textColor="@color/text"
        android:gravity="center"
        android:layout_weight="1"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/sub"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/Decrement"
        android:text="@string/decrement"
        android:textSize="50sp"
        android:onClick="decrement"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:paddingStart="5dp"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/cost"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cost"
            android:gravity="right"
            android:paddingEnd="5dp"
            android:textSize="25sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/reset"
        android:text="@string/reset"
        android:textSize="20sp"
        android:onClick="reset"/>

</LinearLayout>
